<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".InputActivity"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background"
	>

	<!-- BACK BUTTON -->
	<TextView
		android:id="@+id/input_activity_back_button"
		android:layout_width="46dp"
		android:layout_height="46dp"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginLeft="10dp"
		android:layout_marginStart="10dp"
		android:layout_marginTop="15dp"
		android:gravity="center"
		android:onClick="closeActivity"
		android:text="@string/icon_arrow_back"
		android:textColor="#ffffff"
		android:textSize="46sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		/>

	<!-- GRABO LOGO -->
	<ImageView
		android:id="@+id/input_activity_logo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:contentDescription="@string/grabo_logo"
		android:src="@drawable/logo"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		/>

	<!-- INPUT DESCRIPTION -->
	<TextView
		android:id="@+id/input_activity_text_description"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="40dp"
		android:text="@string/input_activity_text_description"
		android:textColor="#ffffff"
		android:textSize="17sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/input_activity_logo"
		/>

	<!-- VOUCHER CODE INPUT -->
	<EditText
		android:id="@+id/input_activity_voucher_code_input"
		android:layout_width="270dp"
		android:layout_height="40dp"
		android:layout_marginTop="50dp"
		android:background="@drawable/edt_bg_selector"
		android:hint="@string/input_activity_voucher_code_text"
		android:inputType="number"
		android:singleLine="true"
		android:textColor="#fefefe"
		android:theme="@style/AppThemeEdit"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/input_activity_text_description"/>

	<!-- VOUCHER SECRET CODE INPUT -->
	<EditText
		android:id="@+id/input_activity_voucher_secret_code_input"
		android:layout_width="270dp"
		android:layout_height="40dp"
		android:layout_marginTop="20dp"
		android:background="@drawable/edt_bg_selector"
		android:hint="@string/input_activity_voucher_secret_code_text"
		android:inputType="number"
		android:singleLine="true"
		android:textColor="#fefefe"
		android:theme="@style/AppThemeEdit"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/input_activity_voucher_code_input"/>

	<!-- CHECK VOUCHER BUTTON -->
	<RelativeLayout
		android:id="@+id/input_activity_check_button"
		android:layout_width="260dp"
		android:layout_height="50dp"
		android:layout_marginTop="20dp"
		android:background="@drawable/rounded_button"
		android:onClick="checkVoucher"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.496"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/input_activity_voucher_secret_code_input"
		>

		<!-- CHECK VOUCHER BUTTON TEXT -->
		<TextView
			android:id="@+id/input_activity_check_button_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:gravity="center"
			android:textStyle="bold"
			android:text="@string/input_activity_button_text"
			android:textColor="#7f7f7f"
			android:textSize="16sp"/>

		<!-- CHECK VOUCHER BUTTON ICON -->
		<TextView
			android:id="@+id/input_activity_check_button_icon"
			android:layout_width="30dp"
			android:layout_height="30dp"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"
			android:layout_centerVertical="true"
			android:layout_marginRight="5dp"
			android:layout_marginEnd="5dp"
			android:gravity="center"
			android:text="@string/icon_rounded_arrow_right"
			android:textColor="#7f7f7f"
			android:textSize="30sp"/>

	</RelativeLayout>

</android.support.constraint.ConstraintLayout>